[tool.poetry]
name = "palette-cleanser"
version = "0.1.0"
description = ""
authors = ["Matt Muldowney <matt.muldowney@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
attrs = "^21.2.0"
click = "^7.1.2"
iniconfig = "^1.1.1"
Jinja2 = "^3.0.1"
MarkupSafe = "^2.0.1"
mock = "^4.0.3"
numpy = "^1.21.1"
packaging = "^21.0"
Pillow = "^8.3.1"
pluggy = "^0.13.1"
py = "^1.10.0"
pyparsing = "^2.4.7"
pytest = "^6.2.4"
PyYAML = "^5.4.1"
tabulate = "^0.8.9"
toml = "^0.10.2"
typer = "^0.3.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
